# interest-calculator-rs

./: Cargo.toml  README.md
src/: calculator.rs  cli.rs  events.rs  lib.rs  main.rs  plot.rs  process.rs  reports.rs
src/gui/: mod.rs
src/gui/widgets/: event_initialization.rs  mod.rs  summary.rs
tests/: basic.rs  extra.rs
web/: index.html
wip/: plot.rs
