[package]
name = "interest-calculator-rs"
version = "0.1.0"
authors = ["Vegard Sandengen <vegardsandengen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
chrono = "0.4"
num-traits = "0.2"
plotters = "0.3"
console_error_panic_hook = "0.1"
