[package]
name = "interest-calculator"
version = "0.1.0"
authors = ["Vegard Sandengen <vegardsandengen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib" ]

[dependencies]
env_logger = "*"
structopt = { version = "0.3", default-features = false }
chrono = "0.4"
num-traits = "0.2"
plotters = "0.3"
console_error_panic_hook = "0.1"
iced = "0.2"
iced_web = "0.3"
