[package]
name = "interest-calculator"
version = "0.1.0"
authors = ["Vegard Sandengen <vegardsandengen@gmail.com>"]
edition = "2018"

[features]
default = []

gui = ["iced", "iced_web", "console_error_panic_hook", "chrono/wasmbind"]
cli = []

[[bin]]
name = "cli"
required-features = ["cli"]

[[bin]]
name = "gui"
required-features = ["gui"]

[dependencies]
env_logger = "*"
structopt = { version = "0.3", default-features = false }
chrono = "0.4"
num-traits = "0.2"
plotters = "0.3"

# Dependencies related to gui/web
console_error_panic_hook = { version = "0.1", optional = true }
iced = { version = "0.2", optional = true }
iced_web = { version = "0.3", optional = true }
